// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reader.Header Component renders correctly 1`] = `
<header
  className="header-reader"
>
  <nav
    className="container-banner"
  >
    <button
      className="button-menu"
      data-id="toggle-menu"
      onClick={[Function]}
    >
      Menu
    </button>
    <button
      className="button-index"
      onClick={[Function]}
    >
      Contents
      <i
        aria-hidden="true"
        className="manicon manicon-caret-down"
      />
    </button>
    <nav
      className="menu-buttons"
    >
      <ul>
        <li>
          <button
            className="button-visibility"
            data-id="toggle-visibility"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="manicon manicon-eye-outline"
            />
            <span
              className="screen-reader-text"
            >
              Open the visibility menu
            </span>
          </button>
        </li>
        <li>
          <button
            className="button-appearance"
            data-id="toggle-appearance"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="manicon manicon-aa"
            />
            <span
              className="screen-reader-text"
            >
              Open reader appearance menu
            </span>
          </button>
        </li>
        <li>
          <button
            className="button-search"
            data-id="toggle-menu"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="manicon manicon-magnify"
            />
            <span
              className="screen-reader-text"
            >
              Open search
            </span>
          </button>
        </li>
        <li>
          <button
            className="button-avatar"
            onClick={[Function]}
          >
            <span
              className="screen-reader-text"
            >
              Login or open user settings
            </span>
            <figure
              className="avatar"
              style={undefined}
            >
              <span
                className="screen-reader-text"
              >
                Avatar
              </span>
              <i
                aria-hidden="true"
                className="manicon manicon-person"
              />
            </figure>
          </button>
        </li>
      </ul>
    </nav>
  </nav>
  <nav
    className="menu-panels-left"
  >
    <div
      className="panel-hidden"
    >
      <nav
        className="reader-return-menu"
      >
        <ul>
          <li>
            <a
              href="/project/slug-2"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-arrow-round-left"
              />
              Project Home
              <span>
                Rowan Test
              </span>
            </a>
          </li>
          <li>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-books-with-glasses-simple"
              />
              Projects
            </a>
          </li>
          <li>
            <button
              className="flush-bottom"
              data-id="toggle-overlay"
              onClick={[MockFunction]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-manifold-logo"
              />
              Sign-in
            </button>
            <a
              className="note"
              href="http://manifold.umn.edu/about/"
              target="_blank"
            >
              Learn More About 
              <br />
              <span>
                Manifold
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </nav>
  <nav
    className="menu-panels-right"
  >
    <div
      className="panel-hidden"
    >
      <span />
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="visibility-menu"
      >
        <ul />
      </nav>
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="search-menu"
      >
        <span />
      </nav>
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="appearance-menu"
      >
        <ul>
          <li>
            <div
              className="control-font"
            >
              <button
                className="font-type serif"
                onClick={[Function]}
              >
                Serif
              </button>
              <div
                className="font-size"
              >
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-dash"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Decrease font size
                  </span>
                </button>
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-plus"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Increase font size
                  </span>
                </button>
              </div>
            </div>
            <div
              className="control-font"
            >
              <button
                className="font-type sans-serif"
                onClick={[Function]}
              >
                Sans-serif
              </button>
              <div
                className="font-size"
              >
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-dash"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Decrease font size
                  </span>
                </button>
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-plus"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Increase font size
                  </span>
                </button>
              </div>
            </div>
          </li>
          <li>
            <div
              className="control-colors"
            >
              <button
                className="color-scheme light"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="manicon manicon-check"
                />
                <span
                  className="screen-reader-text"
                >
                  Use light color scheme in reader
                </span>
              </button>
              <button
                className="color-scheme dark"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="manicon manicon-check"
                />
                <span
                  className="screen-reader-text"
                >
                  Use dark color scheme in reader
                </span>
              </button>
            </div>
          </li>
          <li>
            <div
              className="control-margins"
            >
              <button
                className="margin-increase"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="compound-icon"
                >
                  <i
                    className="manicon manicon-margins-narrow-arrows"
                  />
                  <i
                    className="manicon manicon-margins-narrow-text"
                  />
                </i>
                <span
                  className="screen-reader-text"
                >
                  Increase text margins
                </span>
              </button>
              <button
                className="margin-decrease"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="compound-icon"
                >
                  <i
                    className="manicon manicon-margins-wide-arrows"
                  />
                  <i
                    className="manicon manicon-margins-wide-text"
                  />
                </i>
                <span
                  className="screen-reader-text"
                >
                  Decrease text margins
                </span>
              </button>
            </div>
          </li>
        </ul>
      </nav>
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="user-menu menu-hidden"
      >
        <i
          className="tail"
        />
        <ul>
          <li>
            <button
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-person-pencil-simple"
              />
              Edit Profile
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-circle-arrow-out-right"
              />
              Logout
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </nav>
  <section
    className="notifications-container"
    role="alert"
  >
    <div
      className="notifications-list-header notifications-list"
    >
      <span />
    </div>
  </section>
</header>
`;

exports[`Reader.Header Component renders correctly when no TOC or metadata 1`] = `
<header
  className="header-reader"
>
  <nav
    className="container-banner"
  >
    <button
      className="button-menu"
      data-id="toggle-menu"
      onClick={[Function]}
    >
      Menu
    </button>
    <nav
      className="menu-buttons"
    >
      <ul>
        <li>
          <button
            className="button-visibility"
            data-id="toggle-visibility"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="manicon manicon-eye-outline"
            />
            <span
              className="screen-reader-text"
            >
              Open the visibility menu
            </span>
          </button>
        </li>
        <li>
          <button
            className="button-appearance"
            data-id="toggle-appearance"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="manicon manicon-aa"
            />
            <span
              className="screen-reader-text"
            >
              Open reader appearance menu
            </span>
          </button>
        </li>
        <li>
          <button
            className="button-search"
            data-id="toggle-menu"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="manicon manicon-magnify"
            />
            <span
              className="screen-reader-text"
            >
              Open search
            </span>
          </button>
        </li>
        <li>
          <button
            className="button-avatar"
            onClick={[Function]}
          >
            <span
              className="screen-reader-text"
            >
              Login or open user settings
            </span>
            <figure
              className="avatar"
              style={undefined}
            >
              <span
                className="screen-reader-text"
              >
                Avatar
              </span>
              <i
                aria-hidden="true"
                className="manicon manicon-person"
              />
            </figure>
          </button>
        </li>
      </ul>
    </nav>
  </nav>
  <nav
    className="menu-panels-left"
  >
    <div
      className="panel-hidden"
    >
      <nav
        className="reader-return-menu"
      >
        <ul>
          <li>
            <a
              href="/project/slug-2"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-arrow-round-left"
              />
              Project Home
              <span>
                Rowan Test
              </span>
            </a>
          </li>
          <li>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-books-with-glasses-simple"
              />
              Projects
            </a>
          </li>
          <li>
            <button
              className="flush-bottom"
              data-id="toggle-overlay"
              onClick={[MockFunction]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-manifold-logo"
              />
              Sign-in
            </button>
            <a
              className="note"
              href="http://manifold.umn.edu/about/"
              target="_blank"
            >
              Learn More About 
              <br />
              <span>
                Manifold
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </nav>
  <nav
    className="menu-panels-right"
  >
    <div
      className="panel-hidden"
    >
      <span />
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="visibility-menu"
      >
        <ul />
      </nav>
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="search-menu"
      >
        <span />
      </nav>
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="appearance-menu"
      >
        <ul>
          <li>
            <div
              className="control-font"
            >
              <button
                className="font-type serif"
                onClick={[Function]}
              >
                Serif
              </button>
              <div
                className="font-size"
              >
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-dash"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Decrease font size
                  </span>
                </button>
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-plus"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Increase font size
                  </span>
                </button>
              </div>
            </div>
            <div
              className="control-font"
            >
              <button
                className="font-type sans-serif"
                onClick={[Function]}
              >
                Sans-serif
              </button>
              <div
                className="font-size"
              >
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-dash"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Decrease font size
                  </span>
                </button>
                <button
                  disabled={true}
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="manicon manicon-plus"
                  />
                  <span
                    className="screen-reader-text"
                  >
                    Increase font size
                  </span>
                </button>
              </div>
            </div>
          </li>
          <li>
            <div
              className="control-colors"
            >
              <button
                className="color-scheme light"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="manicon manicon-check"
                />
                <span
                  className="screen-reader-text"
                >
                  Use light color scheme in reader
                </span>
              </button>
              <button
                className="color-scheme dark"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="manicon manicon-check"
                />
                <span
                  className="screen-reader-text"
                >
                  Use dark color scheme in reader
                </span>
              </button>
            </div>
          </li>
          <li>
            <div
              className="control-margins"
            >
              <button
                className="margin-increase"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="compound-icon"
                >
                  <i
                    className="manicon manicon-margins-narrow-arrows"
                  />
                  <i
                    className="manicon manicon-margins-narrow-text"
                  />
                </i>
                <span
                  className="screen-reader-text"
                >
                  Increase text margins
                </span>
              </button>
              <button
                className="margin-decrease"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="compound-icon"
                >
                  <i
                    className="manicon manicon-margins-wide-arrows"
                  />
                  <i
                    className="manicon manicon-margins-wide-text"
                  />
                </i>
                <span
                  className="screen-reader-text"
                >
                  Decrease text margins
                </span>
              </button>
            </div>
          </li>
        </ul>
      </nav>
    </div>
    <div
      className="panel-hidden"
    >
      <nav
        className="user-menu menu-hidden"
      >
        <i
          className="tail"
        />
        <ul>
          <li>
            <button
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-person-pencil-simple"
              />
              Edit Profile
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-circle-arrow-out-right"
              />
              Logout
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </nav>
  <section
    className="notifications-container"
    role="alert"
  >
    <div
      className="notifications-list-header notifications-list"
    >
      <span />
    </div>
  </section>
</header>
`;
